--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
 
         // ✅ โหลดโมเดล OBJ
         const loader = new THREE.OBJLoader();
+        loader.load('chair.obj', function (object) {
+            // ตั้งค่า castShadow กับทุก mesh ใน object
+            object.traverse(function (child) {
+                if (child.isMesh) {
+                    child.castShadow = true;
+                    child.receiveShadow = true;
+                }
+            });
+            object.position.set(0, 0, 3);
+            scene.add(object);
+        }, undefined, function (error) {
+            console.error('Error loading OBJ:', error);
+        });
         loader.load('model1.obj', function (object) {
             // ตั้งค่า castShadow กับทุก mesh ใน object
             object.traverse(function (child) {
@@ -78,6 +91,20 @@
                     child.receiveShadow = true;
                 }
             });
+            object.position.set(0, 0, -2);
+            scene.add(object);
+        }, undefined, function (error) {
+            console.error('Error loading OBJ:', error);
+        });
+        loader.load('https://sibsansuk.github.io/myModel.obj', function (object) {
+            // ตั้งค่า castShadow กับทุก mesh ใน object
+            object.traverse(function (child) {
+                if (child.isMesh) {
+                    child.castShadow = true;
+                    child.receiveShadow = true;
+                }
+            });
+            object.position.set(0, 0, 1);
             scene.add(object);
         }, undefined, function (error) {
             console.error('Error loading OBJ:', error);
